--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,13 +3,16 @@
 # See https://docs.djangoproject.com/en/5.2/howto/deployment/checklist/
 
 # SECURITY WARNING: keep the secret key used in production secret!
-DJANGO_SECRET_KEY=django-secret-key
+DJANGO_SECRET_KEY=djanog-secrete-key
+# SECURITY WARNING: don't run with debug turned on in production!
 DJANGO_DEBUG=True
 
 # Google OAuth
-GOOGLE_CLIENT_SECRETS=credentials.json (download from Google Cloud)
-GOOGLE_SCOPES=https://www.googleapis.com/auth/gmail.readonly
+GOOGLE_CLIENT_SECRETS=credentials.json
+GOOGLE_SCOPES=https://www.googleapis.com/auth/gmail.modify
 GOOGLE_REDIRECT_URI=http://localhost:8000/oauth2callback/
 
+GOOGLE_CLIENT_ID=google_client_id
+GOOGLE_CLIENT_SECRET=google_client_secrete
 # Local development
 OAUTHLIB_INSECURE_TRANSPORT=1
